Fix Kwc_Advanced_YoutubeWithPreviewImage_Component Video played without clicking the playbutton, because Kwc_Advanced_Youtube_Component got an incompatible update. Also fix Kwc_Advanced_Youtube_Component to only instanciate when it is visible.

--- a/Kwc/Advanced/YoutubeWithPreviewImage/Component.scss
+++ b/Kwc/Advanced/YoutubeWithPreviewImage/Component.scss
@@ -24,6 +24,19 @@
         display: none;
     }
 
+    .kwcBem__outerYoutubeContainer {
+        &.youtubeActive {
+            .kwcBem {
+                &__youtubeContainer {
+                    position: relative;
+                }
+                &__youtubePlayer {
+                    display: block;
+                }
+            }
+        }
+    }
+
     &.kwcBem--ratio16x9 {
         .kwcBem__youtubeContainer {
             padding-bottom: 56.27%;
